fix padding on mobile

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ main {
     max-width: 800px;
     margin-right: auto;
     margin-left: auto;
+    padding: 5px 10px;
 }
 header {
     font-size: 30px;
